--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MyPortfolio</title>
   <link rel="stylesheet" href="./assets/reset.css" />
-  <link rel="stylesheet" href="./assets/style.css" />
-  
+  <link rel="stylesheet" href="./assets/style.css" /> 
 </head>
 
 
@@ -15,13 +14,12 @@
     <header>
       <h1>Connor Williamson</h1>
       <br>
-      <img src="./assets/images/me.jpeg" alt="avatar" height="140px" width="100px">
+      <img src="./assets/images/me.jpeg" alt="avatar" height="180px" width="130px">
       <nav class="navbar">
         <ul class="link-group">
-            <li class="link active"><a href="#">about me</a></li>
-            <li class="link"><a href="#">work</a></li>
-            <li class="link"><a href="#">contact me</a></li>
-            <li class="link"><a href="#">resume</a></li>
+            <li class="link active"><a href="#section1">about me</a></li>
+            <li class="link"><a href="#section2">work</a></li>
+            <li class="link"><a href="#section3">contact me</a></li>
         </ul>
     </nav>
     </header>
@@ -30,51 +28,80 @@
       <section>
         <article>
             <br>
-          <h2>About Me</h2>
-          <br>
-          <div>
-            <p>My name is Connor  Williamson. I'm currently 26 years old, was born in Park City, UT, and have lived here my whole life. I started coding this year and want to pursue a career in the field. I got a BS Psychology + Pre-Medicine from the Honors College at the University of Utah but decided that I wanted to work in tech instead of medicine.</p>
+            <br>
+          <div class="about me" id="section1">
+            <h2>About Me</h2>
           </div>
           <br>
-          <h2>Work</h2>
+          <div class="container">
           <br>
+          <p>My name is Connor  Williamson. I'm currently 26 years old, was born in Park City, UT, and have lived here my whole life. I started coding this year and want to pursue a career in the field. I got a BS Psychology + Pre-Medicine from the Honors College at the University of Utah but decided that I wanted to work in tech instead of medicine.</p>
+          </div>
+          <br>
+          <br>
+          <div class="work" id="section2">
+            <h2>Work</h2>
+          </div>
+          <br>
+            <div class="main-project">
+              <h3>Project 1</h3> 
+              <br>
+              <br>
+              <p><a href="https://www.atlassian.com/git">
+              <img src="./assets/images/data-5.jpg" height="300px" width="300px"></a></p>
+              <br></div>
           <div class="row">
             <div class="column" style="background-color:#aaa;">
-              <h2>Project 1</h2>
+              <h3>Project 2</h3>
               <br>
-              <p>Some text..</p>
+              <p><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">
+                <img src="./assets/images/data-1.jpg" height="200px" width="200px"></a></p>
             </div>
             <div class="column" style="background-color:#bbb;">
-              <h2>Project 2</h2>
+              <h3>Project 3</h3>
               <br>
-              <p>Some text..</p>
+              <p><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures">
+                <img src="./assets/images/data-2.jpg" height="200px" width="200px"></a></p>
             </div>
           </div>
 
           <div class="row">
             <div class="column" style="background-color:#ccc;">
-              <h2>Project 3</h2>
+              <h3>Project 4</h3>
               <br>
-              <p>Some text..</p>
+              <p><a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics">
+                <img src="./assets/images/data-3.jpg" height="200px" width="200px"></a></p>
             </div>
-            <div class="column" style="background-color:#ddd;">
-              <h2>Project 4</h2>
+            <div class="column" style="background-color:#aca6a6f1;">
+              <h3>Project 5</h3>
               <br>
-              <p>Some text..</p>
+              <p><a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+                <img src="./assets/images/data-4.jfif" height="200px" width="200px"></a></p>
             </div>
           </div>
-          <br>    
-          <h2>Contact Me</h2>
           <br>
-          
-          <h2>Resume</h2>
+          <div class="contact-me" id="section3">    
+            <h2>Contact Me</h2>
+          </div>
+          <br>
+          <div class="container">
+          <form>
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname" name="fname"><br>
+            <label for="lname">Last name:</label><br>
+            <input type="text" id="lname" name="lname">
+            
+            <label for="subject">Subject</label>
+            <textarea id="subject" name="subject" placeholder="Type here..." style="height:200px"></textarea>
+
+            <input type="submit" value="Submit">
+          </form></div>
+          <br>
           <br>
         </article>
       </section>
     </main>
-  
     <footer>
-      <span>Thanks for visiting!</span>
     </footer>
   </body>
   
