Update portfolio for Project 3

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <br />
               <p>
                 <a
-                  href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures"
+                  href="https://github.com/ShiftoSnag/RCD-Events"
                 >
                   <img
                     src="./assets/images/data-2.jpg"
